updated pubs, improved resolution of profile pic

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -219,6 +219,11 @@ header li:last-child a {
  
 }
 
+.author{
+  color:#237ba1;
+  font-weight: 500;
+}
+
 .h1tab{
   background-color:#237ba1;
   color:white;
